diesel_compile_tests/tests/fail/update_requires_set.stderr
error[E0277]: the trait bound `diesel::query_builder::update_statement::SetNotCalled: diesel::query_builder::QueryFragment<_>` is not satisfied
  --> $DIR/update_requires_set.rs:14:10
   |
14 |         .execute(&conn);
   |          ^^^^^^^ the trait `diesel::query_builder::QueryFragment<_>` is not implemented for `diesel::query_builder::update_statement::SetNotCalled`
   |
   = note: required because of the requirements on the impl of `diesel::query_builder::QueryFragment<_>` for `diesel::query_builder::UpdateStatement<users::table, diesel::query_builder::where_clause::NoWhereClause>`
   = note: required because of the requirements on the impl of `diesel::query_dsl::load_dsl::ExecuteDsl<_, _>` for `diesel::query_builder::UpdateStatement<users::table, diesel::query_builder::where_clause::NoWhereClause>`
